# macro_data_reports

./: .gitignore  .pre-commit-config.yaml  .replit  README.md  Work rec.mov  log-config.yaml  main.py  pyproject.toml  replit.md
src/macrodata_reports/: converters.py  data_objects.py  formaters.py  main.py  reports.py
tests/: test_average_gdp.py
